agregar rama y apartado analisis

--- a/index_0902-20-6764.html
+++ b/index_0902-20-6764.html
@@ -67,7 +67,7 @@
     <footer>
         <p>Abner Isaí Medina Caal</p><p>0902-20-6764</p>
         <p>Contacto: <a href="mailto:amedinac@miumg.edu.gt">amedinac@miumg.edu.gt</a></p>
-        <p>Dirección: INMR Emilio Rosales Ponce, Coban, Guatemala</p>
+        <p>Dirección: INMR Emilio Rosales Ponce, Coban A.V., Guatemala</p>
     </footer>
 </body>
 </html>
